# fluidsynth

./: .gitmodules  CMakeLists.txt  ThomasBS.txt  VersionInfoLib.rc  config.h  libfluidsynth-OBJ.vcxproj  libfluidsynth-OBJ.vcxproj.filters  libfluidsynth.def  libfluidsynth.vcxproj  libfluidsynth.vcxproj.filters
include/: fluidsynth
internal_include/: ConstExprArr.hpp  fluid_adriver.h  fluid_adsr_env.h  fluid_audio_convert.h  fluid_chan.h  fluid_chorus.h  fluid_cmd.h  fluid_conv.h  fluid_conv_tables.h  fluid_coreaudio_avaudiosession.h  fluid_defsfont.h  fluid_dls.h  fluid_event.h  fluid_file.h  fluid_gen.h  fluid_hash.h  fluid_iir_filter.h  fluid_instpatch.h  fluid_ladspa.h  fluid_lfo.h  fluid_limiter.h  fluid_limiter_impl.h  fluid_list.h  fluid_locked_atomics.h  fluid_mdriver.h  fluid_midi.h  fluid_midi_router.h  fluid_mod.h  fluid_phase.h  fluid_rev.h  fluid_rev_dattorro.h  fluid_rev_fdn.h  fluid_rev_filters.h  fluid_rev_freeverb.h  fluid_rev_lexverb.h  fluid_rev_signalsmith.h  fluid_ringbuffer.h  fluid_rtkit.h  fluid_rvoice.h  fluid_rvoice_dsp_tables.h  (+18 more)
internal_include/gentables/: ConstExprArr.hpp
internal_include/rvoice/: fluid_rvoice_dsp_tables.h
internal_include/utils/: fluid_conv_tables.h
libfluidsynth.dir/Debug/libfluidsynth.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  libfluidsynth.lastbuildstate
