cmake_minimum_required(VERSION 3.16)
project(port_fluidsynth C CXX)

option(PORT_FLUIDSYNTH_BUILD_BY_DEFAULT "Build libfluidsynth as part of this wrapper's default target" ON)
option(PORT_FLUIDSYNTH_ENABLE_NETWORK "Enable FluidSynth network support" ON)
option(PORT_FLUIDSYNTH_ENABLE_OPENSL_ES "Enable FluidSynth OpenSL ES driver on Android" ${ANDROID})
option(PORT_FLUIDSYNTH_SHARED "Build libfluidsynth as a shared library" ON)

function(port_fluidsynth_cache_default name type value description)
    if(NOT DEFINED ${name})
        set(${name} ${value} CACHE ${type} "${description}")
    endif()
endfunction()

if(DEFINED BUILD_SHARED_LIBS)
    set(port_fluidsynth_parent_BUILD_SHARED_LIBS "${BUILD_SHARED_LIBS}")
    set(port_fluidsynth_restore_BUILD_SHARED_LIBS ON)
else()
    set(port_fluidsynth_restore_BUILD_SHARED_LIBS OFF)
endif()

set(BUILD_SHARED_LIBS ${PORT_FLUIDSYNTH_SHARED})
set(osal cpp11 CACHE STRING "FluidSynth OS abstraction layer")

if(EXISTS "${CMAKE_CURRENT_LIST_DIR}/fluidsynth/gcem/include/gcem.hpp")
    set(GCEM_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/fluidsynth/gcem/include" CACHE PATH "Bundled GCEM include directory")
endif()

port_fluidsynth_cache_default(enable-alsa BOOL OFF "Compile ALSA support")
port_fluidsynth_cache_default(enable-aufile BOOL ON "Compile audio file renderer support")
port_fluidsynth_cache_default(enable-dbus BOOL OFF "Compile D-Bus support")
port_fluidsynth_cache_default(enable-dsound BOOL OFF "Compile DirectSound support")
port_fluidsynth_cache_default(enable-jack BOOL OFF "Compile JACK support")
port_fluidsynth_cache_default(enable-ladspa BOOL OFF "Compile LADSPA support")
port_fluidsynth_cache_default(enable-libinstpatch BOOL OFF "Compile libinstpatch support")
port_fluidsynth_cache_default(enable-libsndfile BOOL OFF "Compile libsndfile support")
port_fluidsynth_cache_default(enable-midishare BOOL OFF "Compile MidiShare support")
port_fluidsynth_cache_default(enable-native-dls BOOL ON "Compile native DLS support")
port_fluidsynth_cache_default(enable-network BOOL ${PORT_FLUIDSYNTH_ENABLE_NETWORK} "Enable network support")
port_fluidsynth_cache_default(enable-oboe BOOL OFF "Compile Oboe support")
port_fluidsynth_cache_default(enable-openmp BOOL OFF "Compile OpenMP support")
port_fluidsynth_cache_default(enable-opensles BOOL ${PORT_FLUIDSYNTH_ENABLE_OPENSL_ES} "Compile OpenSL ES support")
port_fluidsynth_cache_default(enable-oss BOOL OFF "Compile OSS support")
port_fluidsynth_cache_default(enable-pipewire BOOL OFF "Compile PipeWire support")
port_fluidsynth_cache_default(enable-portaudio BOOL OFF "Compile PortAudio support")
port_fluidsynth_cache_default(enable-pulseaudio BOOL OFF "Compile PulseAudio support")
port_fluidsynth_cache_default(enable-readline BOOL OFF "Compile readline support")
port_fluidsynth_cache_default(enable-sdl3 BOOL OFF "Compile SDL3 support")
port_fluidsynth_cache_default(enable-signalsmith BOOL OFF "Compile Signalsmith limiter and reverb support")
port_fluidsynth_cache_default(enable-systemd BOOL OFF "Compile systemd support")
port_fluidsynth_cache_default(enable-wasapi BOOL OFF "Compile WASAPI support")
port_fluidsynth_cache_default(enable-waveout BOOL OFF "Compile WaveOut support")
port_fluidsynth_cache_default(enable-winmidi BOOL OFF "Compile Windows MIDI support")

add_subdirectory(fluidsynth EXCLUDE_FROM_ALL)

if(port_fluidsynth_restore_BUILD_SHARED_LIBS)
    set(BUILD_SHARED_LIBS "${port_fluidsynth_parent_BUILD_SHARED_LIBS}")
else()
    unset(BUILD_SHARED_LIBS)
endif()

if(PORT_FLUIDSYNTH_BUILD_BY_DEFAULT)
    add_custom_target(port_fluidsynth_default ALL DEPENDS libfluidsynth)
endif()

if(NOT TARGET port_libfluidsynth)
    add_library(port_libfluidsynth ALIAS libfluidsynth)
endif()
